{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 18,
  "lineage": "c5c3f4fd-c7c7-5bb2-8e66-46ddb14454da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048a4f16a96aaf048",
            "arn": "arn:aws:ec2:us-east-1:154061203144:elastic-ip/eipalloc-048a4f16a96aaf048",
            "associate_with_private_ip": "10.0.2.100",
            "domain": "vpc",
            "id": "eipalloc-048a4f16a96aaf048",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-6-29-54.compute-1.amazonaws.com",
            "public_ip": "52.6.29.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "resume-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:154061203144:instance/i-00cd05a41fa4a0e59",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CICD",
            "id": "i-00cd05a41fa4a0e59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "demokey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f2b4dc3d2be38de5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2b4dc3d2be38de5",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "public_ip": "52.6.29.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0148bc438d2298ddb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05113e59cbfe26afa",
            "tags": {
              "Name": "master-server"
            },
            "tags_all": {
              "Name": "master-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f399f27a1d1afb27"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.niw-master",
            "aws_security_group.resume-sg",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "resume-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:internet-gateway/igw-0837bf05a37cdd72a",
            "id": "igw-0837bf05a37cdd72a",
            "owner_id": "154061203144",
            "tags": {
              "Name": "resume-igw"
            },
            "tags_all": {
              "Name": "resume-igw"
            },
            "vpc_id": "vpc-07c1d652030f354d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "niw-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:network-interface/eni-0f2b4dc3d2be38de5",
            "id": "eni-0f2b4dc3d2be38de5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:78:0a:7b:4d:c7",
            "owner_id": "154061203144",
            "private_ip": "10.0.2.100",
            "private_ip_list": [
              "10.0.2.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f399f27a1d1afb27"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05113e59cbfe26afa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "resume-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:route-table/rtb-036f334b951f56cba",
            "id": "rtb-036f334b951f56cba",
            "owner_id": "154061203144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0837bf05a37cdd72a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resume-route"
            },
            "tags_all": {
              "Name": "resume-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c1d652030f354d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.resume-igw",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "resume-route_table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085bb5861b4ff9e2a",
            "route_table_id": "rtb-036f334b951f56cba",
            "subnet_id": "subnet-05113e59cbfe26afa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.resume-igw",
            "aws_route_table.resume-route",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "resume-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group/sg-0f399f27a1d1afb27",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f399f27a1d1afb27",
            "ingress": [],
            "name": "allow tls",
            "name_prefix": "",
            "owner_id": "154061203144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-sg"
            },
            "tags_all": {
              "Name": "resume-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c1d652030f354d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "resume-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:subnet/subnet-05113e59cbfe26afa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05113e59cbfe26afa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154061203144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-subnet"
            },
            "tags_all": {
              "Name": "resume-subnet"
            },
            "vpc_id": "vpc-07c1d652030f354d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "resume-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:vpc/vpc-07c1d652030f354d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.2.0/24",
            "default_network_acl_id": "acl-04b3e54e33ff3bbcd",
            "default_route_table_id": "rtb-08a4b2a4b0567d873",
            "default_security_group_id": "sg-0c24702a3f6f70fc6",
            "dhcp_options_id": "dopt-001e3584aea96fecd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c1d652030f354d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a4b2a4b0567d873",
            "owner_id": "154061203144",
            "tags": {
              "Name": "resume-vpc"
            },
            "tags_all": {
              "Name": "resume-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_2377",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0c084e23e3b437f41",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2377,
            "id": "sgr-0c084e23e3b437f41",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f399f27a1d1afb27",
            "security_group_rule_id": "sgr-0c084e23e3b437f41",
            "tags": null,
            "tags_all": {},
            "to_port": 2377
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_4789_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0fdf65bac99302cbb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4789,
            "id": "sgr-0fdf65bac99302cbb",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f399f27a1d1afb27",
            "security_group_rule_id": "sgr-0fdf65bac99302cbb",
            "tags": null,
            "tags_all": {},
            "to_port": 4789
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_7946_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-06f411d28e680cc9e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-06f411d28e680cc9e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f399f27a1d1afb27",
            "security_group_rule_id": "sgr-06f411d28e680cc9e",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_7946_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-09d35e55282643975",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-09d35e55282643975",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f399f27a1d1afb27",
            "security_group_rule_id": "sgr-09d35e55282643975",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-03467d1fc3a78db88",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-03467d1fc3a78db88",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f399f27a1d1afb27",
            "security_group_rule_id": "sgr-03467d1fc3a78db88",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-07cdad7ac216b6398",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07cdad7ac216b6398",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f399f27a1d1afb27",
            "security_group_rule_id": "sgr-07cdad7ac216b6398",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-094ad3591344a452b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-094ad3591344a452b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f399f27a1d1afb27",
            "security_group_rule_id": "sgr-094ad3591344a452b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    }
  ]
}